--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,8 +1,8 @@
 name: CI-PROD
 
 env:
-  S3_BUCKET: 'vibe-coding-intro'
-  DISTRIBUTION_ID: 'EPJR120EHVZS6'
+  S3_BUCKET: 'vibe-coding-guide'
+  DISTRIBUTION_ID: 'E16RNQSPALW8O0'
   AWS_DEFAULT_REGION: eu-central-1
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
